cambios en la ventana emergente

--- a/Práctica1/web_project_p1/Prototipo_interfaz/IniciarSesion/Inicio-pop-up.html
+++ b/Práctica1/web_project_p1/Prototipo_interfaz/IniciarSesion/Inicio-pop-up.html
@@ -2,6 +2,7 @@
     <head>
       <!-- COPIAR TODO EL CONTENIDO DE HEAD -->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
@@ -22,8 +23,10 @@
             </nav>
 
   <body>
-      <div class="container">
-        <h4> Para iniciar sesión debes estar registrado como usuario en PumAsk </h4>
+      <div class="container" style="text-align:center">
+        <i class="material-icons" style="font-size: 100px" >person</i>
+        </div>
+        <div class="container">
         <form>
           Correo electrónico:<br>
           <input type="text" name="pregunta" value="">
@@ -31,7 +34,10 @@
           Contraseña:<br>
           <input type="text" name="informacion" value="">
           <br><br>
-          <input type="submit" value="Iniciar sesión">
+          </div>
+          <div class="container" style="text-align:center">
+          <a class="waves-effect waves-light btn">Iniciar sesión</a>
+          </div>
         </form>
          
     </body>
