Detalles de conflicto

--- a/Práctica1/web_project_p1/Prototipo_interfaz/interfaz_agregar_pregunta.html
+++ b/Práctica1/web_project_p1/Prototipo_interfaz/interfaz_agregar_pregunta.html
@@ -6,9 +6,9 @@
       <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, charset=UTF-8""/>
       <!-- Estilos personalizados. -->
-      <link rel="stylesheet" href="archivos_css/estilo.css">
+      <link rel="stylesheet" href="archivos_css/materialize.css">
     </head>
 
 
@@ -20,7 +20,7 @@
           Pregunta:<br>
           <input type="text" name="pregunta" value="">
           <br>
-          Informacion adicional<br>
+          Información adicional<br>
           <input type="text" name="informacion" value="">
           <br><br>
           <input type="submit" value="Publicar">
