--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/registro.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/registro.xhtml
@@ -4,40 +4,39 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui">
   <h:head>
-    <title>Ejemplo de JavaServer Faces</title>
+    <title>Registro</title>
   </h:head>
   <h:body>
 
-    <h1>Formulario de registro</h1> <br/>
+    <h1>PumAsk</h1> <br/>
 
-    <h:form id="myForm">
-      <table>
-        <tr>
-          <td><p:messages id="messages" autoUpdate="true" closable="true" /></td>
-        </tr>
-      </table>
-      <table>
-        <tr>
-          <td>Nombre de usuario</td>
-          <td><p:inputText value="#{registerController.user.usuario}" required="true" id="Username" size="10"/></td>
-        </tr>
-        <tr>
-          <td>Contraseña</td>
-          <td><p:password value="#{registerController.user.contraseña}" required="true" feedback="true" id="Password"/></td>
-        </tr>
-        <tr>
-          <td>Confirmar Contraseña</td>
-          <td><p:password value="#{registerController.user. confirmacionContraseña}" required="true" feedback="true" id="ConfirmPassword"/></td>
-        </tr>
-        <tr>
-          <td colspan="2" align="center">
-            <p:commandButton action="#{registerController.addUser}" value="Registrar"/>
-            <p:commandButton value="Reset" update="myForm" process="@this"  >
-              <p:resetInput target="myForm" />
-            </p:commandButton>
-          </td>
-        </tr>
-      </table>
+    <h:form>
+      <p:panel id="panel" header="Registro">
+
+          <p:messages id="msgs" />
+
+          <h:panelGrid columns="3" cellpadding="5" layout="grid">
+
+              <p:outputLabel for="firstname" value="Nombre de Usuario:" />
+              <p:inputText id="firstname" value="#{userView.firstname}" required="true" label="Firstname">
+                  <f:validateLength minimum="2" />
+              </p:inputText>
+              <p:message for="firstname" display="icon" />
+
+              <p:outputLabel for="lastname" value="Correo:" />
+              <p:inputText id="lastname" value="#{userView.lastname}" label="Lastname" required="true">
+                  <f:validateLength minimum="2" />
+                  <p:ajax update="msgLastname" event="keyup" />
+              </p:inputText>
+              <p:message for="lastname" id="msgLastname" display="icon" />
+
+
+
+          </h:panelGrid>
+
+          <p:commandButton value="Registrar" update="panel" actionListener="#{userView.save}" icon="ui-icon-check" />
+      </p:panel>
     </h:form>
+
   </h:body>
 </html>
