--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/registro.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/registro.xhtml
@@ -30,11 +30,15 @@
               </p:inputText>
               <p:message for="lastname" id="msgLastname" display="icon" />
 
+              <h:outputLabel for="pwd1" value="Contraseña: *" />
+              <p:password id="pwd1" value="#{passwordView.password5}" match="pwd2" label="Password 1" required="true" />
 
+              <h:outputLabel for="pwd2" value="Confirmar Contraseña: *" />
+              <p:password id="pwd2" value="#{passwordView.password5}" label="Password 2" required="true" />
 
           </h:panelGrid>
 
-          <p:commandButton value="Registrar" update="panel" actionListener="#{userView.save}" icon="ui-icon-check" />
+          <p:commandButton value="Registrar" update="panel" update="matchGrid" actionListener="#{userView.save}" icon="ui-icon-check" />
       </p:panel>
     </h:form>
 
