--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/registro.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/registro.xhtml
@@ -22,27 +22,27 @@
 				  <h:panelGrid columns="3" cellpadding="5" layout="grid">
 
 					  <p:outputLabel for="firstname" value="Nombre de Usuario:" />
-					  <p:inputText id="firstname" value="#{userView.firstname}" required="true" label="Firstname">
+					  <p:inputText id="firstname" value="#{controladorRegistro.usuario.nombreUsuario}" required="true" label="Firstname">
 					  </p:inputText>
 					  <p:message for="firstname" display="icon" />
 
 					  <p:outputLabel for="lastname" value="Correo:" />
-					  <p:inputText id="lastname" value="#{userView.lastname}" label="Lastname" required="true">
+					  <p:inputText id="lastname" value="#{controladorRegistro.usuario.correo}" label="Lastname" required="true">
 						  <p:ajax update="msgLastname" event="keyup" />
 					  </p:inputText>
 					  <p:message for="lastname" id="msgLastname" display="icon" />
 
 					  <p:outputLabel for="pwd1" value="Contraseña: *" />
-					  <p:password id="pwd1" value="#{passwordView.password5}" match="pwd2" label="Password 1" required="true" />
+					  <p:password id="pwd1" value="#{controladorRegistro.usuario.contrasenia}" match="pwd2" label="Password 1" required="true" />
 					  <p:message for="pwd1" id="msgpwd1" display="icon" />
 
 					  <p:outputLabel for="pwd2" value="Confirmar Contraseña: *" />
-					  <p:password id="pwd2" value="#{passwordView.password5}" label="Password 2" required="true" />
+					  <p:password id="pwd2" value="#{controladorRegistro.confirmacion}" label="Password 2" required="true" />
 				      <p:message for="pwd2" id="msgpwd2" display="icon" />
 
 				  </h:panelGrid>
 				  <!-- para la validacion de las contraseñas update='matchGrid'-->
-				  <p:commandButton value="Registrar" update="panel" actionListener="#{userView.save}" icon="ui-icon-check" />
+				  <p:commandButton value="Registrar" update="panel" actionListener="#{controladorRegistro.agregaUsuario()}" icon="ui-icon-check" />
 			  </p:panel>
 			</h:form>
 
