--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/carreras/ciencias_ambientales.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/carreras/ciencias_ambientales.xhtml
@@ -11,7 +11,7 @@
   <ui:define name="content">
 
   <h:head>
-    <title>Subforo Actuaría</title>
+    <title>Subforo ciencias ambientales</title>
   </h:head>
   <h:body>
 
