--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/carreras/actuaria.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/carreras/actuaria.xhtml
@@ -30,20 +30,18 @@
 
 
 	<h:form id="agregarP">
-	<pm:field>
+	<h:panelGrid columns="2" cellpadding="5">
+
+
 	  	<h:outputText value="Pregunta"/>
 
 	  	<p:inputText value="#{agregacionPregunta.pregunta.contenido}" required="true" id="pregunta" label="pregunta" />
-	</pm:field>
 
-	<pm:field>
 	  	<h:outputText value="Información adicional"/>
 
 	  	<p:inputTextarea value="#{agregacionPregunta.pregunta.detalle}" required="false" id="detalles" label="detalles"
 	  	autoResize="true" maxlength="150"/>
-	</pm:field>
 
-	<pm:field>
 		<p:selectOneMenu value = "#{agregacionPregunta.pregunta.categoria}">
 			<f:selectItem itemLabel="Servicio Social" itemValue="servicio social"/>
 			<f:selectItem itemLabel="Titulación" itemValue="titulacion"/>
@@ -51,7 +49,8 @@
 
 			<h:commandButton action="#{agregacionPregunta.agregaPregunta()}"
 							 value="Agregar Pregunta"/>
-	</pm:field>
+		</h:panelGrid>
+
 		</h:form>
 
 
