--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/secured/preguntas.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/secured/preguntas.xhtml
@@ -29,25 +29,19 @@
               <div class="col-2">
                 <p style="font-size:12px;color:gray;text-align:end;">${controladorSesion.usuario.nombreUsuario}</p>
               </div>
-              <div class="col-2">
-                <div class="input-group-prepend">
-                  <div class="input-group-text">
-                    <input type="checkbox" aria-label="Checkbox for following text input"/>
-                    </div>
-                  </div>
-                </div>
               </div>
               <div class="row">
                 <div class="col-12">
                   <p>${pregunta.detalle}</p>
                 </div>
               </div>
-              <div class="row">
-                <div style="text-align:end;margin-bottom:5%">
-                  <button class="btn btn-danger" action="{eliminacionPregunta.eliminaPregunta($pregunta)}">Eliminar pregunta</button>
-                </div>
-              </div>
-            </li>
+            <h:form id="eliminar">
+		                   <h:commandButton action="#{eliminacionPregunta.eliminaPregunta(pregunta)}"
+                                      value="eliminar"
+                                      class="btn btn-outline-success my-2 my-sm-0">
+                           </h:commandButton>
+		    </h:form>
+              </li>
           </c:forEach>
         </ul>
       </div>
