--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/carreras/actuaria.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/carreras/actuaria.xhtml
@@ -64,9 +64,10 @@
 					<h:outputText value="#{agregacionPregunta.pregunta.carrera}" />
 				</f:facet>
 				<p:column headerText="Preguntas">
+   				<h:form>
    					<h:outputText value="#{pregunta.contenido}" />
-   					<p:commandButton action="#{agregacionPregunta.verRespuestas()}"
-					value="Ver Respuestas"/>
+   					<p:commandButton action="#{agregacionPregunta.verRespuestas(pregunta.idPregunta)}" value="Ver Respuestas"/>
+				</h:form>
   				</p:column>
 			</p:dataTable>
         </p:tab>
@@ -75,7 +76,7 @@
 				<f:facet name="header">
 					<h:outputText value="#{agregacionPregunta.pregunta.carrera}" />
 				</f:facet>
-				<p:column headerText="Preguntas" >
+				<p:column headerText="Preguntas">
    					<h:outputText value="#{pregunta.contenido}"/>
   				</p:column>
 			</p:dataTable>
