--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/registro.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/registro.xhtml
@@ -19,7 +19,7 @@
 
 				  <p:messages id="msgs" />
 
-				  <h:panelGrid columns="3" cellpadding="5" layout="grid">
+				  <h:panelGrid columns="3" cellpadding="5">
 
 					  <p:outputLabel for="firstname" value="Nombre de Usuario:" />
 					  <p:inputText id="firstname" value="#{controladorRegistro.usuario.nombreUsuario}" required="true" label="Firstname">
