--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/secured/mi_perfil.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/secured/mi_perfil.xhtml
@@ -42,6 +42,7 @@
             <div class="col s8">
               <h3>#{controladorSesion.usuario.nombreUsuario}</h3>
               <a type="button" class="btn btn-primary" href="/pumask/secured/preguntas.xhtml">Mis preguntas</a>
+	      <a type="button" class="btn btn-primary" href="/pumask/secured/respuestas.xhtml">Mis respuestas</a>
             </div>
           </div>
         </div>
