--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/index.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/index.xhtml
@@ -27,6 +27,24 @@
         </div>
       </section>
 
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h:form>
+              <div class="form-group">
+                <label for="search">Buscar</label>
+                <h:inputText type="text" class="form-control" id="search" binding="#{searchInput}"></h:inputText>
+              </div>
+	      <h:form id="buscar">
+                           <h:commandButton action="#{busquedaPregunta.buscarPregunta(searchInput.value)}"
+                                            value="Buscar"
+                                            class="btn btn-outline-success my-2 my-sm-0"/>
+              </h:form>
+            </h:form>
+          </div>
+        </div>
+      </div>
+
       <div class="album py-5 bg-light">
         <div class="container">
 
