eliminar preguntas (administrador)

--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/carreras/actuaria.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/carreras/actuaria.xhtml
@@ -67,6 +67,15 @@
    				<h:form>
    					<h:outputText value="#{pregunta.contenido}" />
    					<p:commandButton action="#{agregacionPregunta.verRespuestas(pregunta.idPregunta)}" value="Ver Respuestas"/>
+				<c:choose>
+					<c:when test = "#{controladorSesion.esAdministrador()}">
+						<h:form>
+							<p:commandButton action="#{eliminacionPregunta.eliminaPregunta(pregunta)}" value="Eliminar Pregunta"/>
+						</h:form>
+					</c:when>
+                			<c:otherwise>
+                			</c:otherwise>
+				</c:choose>
 				</h:form>
   				</p:column>
 			</p:dataTable>
