Actualiza despues de agregar pregunta

--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/carreras/actuaria.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/carreras/actuaria.xhtml
@@ -49,7 +49,7 @@
         </h:panelGrid>
     </p:panel>
     <p:commandButton action="#{agregacionPregunta.agregaPregunta()}"
-					value="Agregar Pregunta" update="panel"/>
+					value="Agregar Pregunta" update="vitas" oncomplete="PF('agp').hide();"/>
 </h:form>
 
 
@@ -57,9 +57,9 @@
 	</p:dialog>
 
 
-	<p:tabView>
+	<p:tabView id="vitas">
         <p:tab title="Titulación">
-            <p:dataTable value="#{agregacionPregunta.obtenerPreguntasTitulacion()}" rows="5" paginator="true" var="pregunta">
+            <p:dataTable id="lista_preguntaT" value="#{agregacionPregunta.obtenerPreguntasTitulacion()}" rows="5" paginator="true" var="pregunta" paginatorPosition="bottom">
 				<f:facet name="header">
 					<h:outputText value="#{agregacionPregunta.pregunta.carrera}" />
 				</f:facet>
@@ -81,7 +81,7 @@
 			</p:dataTable>
         </p:tab>
         <p:tab title="Servicio Social">
-            <p:dataTable value="#{agregacionPregunta.obtenerPreguntasServicioSocial()}" rows="5" paginator="true" var="pregunta">
+            <p:dataTable id="lista_preguntaSS" value="#{agregacionPregunta.obtenerPreguntasServicioSocial()}" rows="5" paginator="true" var="pregunta" paginatorPosition="bottom">
 				<f:facet name="header">
 					<h:outputText value="#{agregacionPregunta.pregunta.carrera}" />
 				</f:facet>
