--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/results.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/results.xhtml
@@ -25,7 +25,11 @@
         <p:tab title="Titulación">
             <p:dataTable value="#{busquedaPregunta.getResults()}" rows="5" paginator="true" var="pregunta">
 				<p:column headerText="Preguntas">
+					<h:form>
    					<h:outputText value="#{pregunta.contenido}" />
+					<h:outputText value=", carrera: #{pregunta.carrera}" />
+					<p:commandButton action="#{agregacionPregunta.verRespuestas(pregunta.idPregunta)}" value="Ver Respuestas"/>
+					</h:form>
   				</p:column>
 			</p:dataTable>
         </p:tab>
