--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/registro.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/registro.xhtml
@@ -32,11 +32,11 @@
 					  </p:inputText>
 					  <p:message for="lastname" id="msgLastname" display="icon" />
 
-					  <p:outputLabel for="pwd1" value="Contraseña: *" />
+					  <p:outputLabel for="pwd1" value="Contraseña: " />
 					  <p:password id="pwd1" value="#{controladorRegistro.usuario.contrasenia}" match="pwd2" label="Password 1" required="true" />
 					  <p:message for="pwd1" id="msgpwd1" display="icon" />
 
-					  <p:outputLabel for="pwd2" value="Confirmar Contraseña: *" />
+					  <p:outputLabel for="pwd2" value="Confirmar Contraseña: " />
 					  <p:password id="pwd2" value="#{controladorRegistro.confirmacion}" label="Password 2" required="true" />
 				      <p:message for="pwd2" id="msgpwd2" display="icon" />
 
